Major edits - add research detail

--- a/statements/statement_research.tex
+++ b/statements/statement_research.tex
@@ -17,85 +17,114 @@
 \linespread{1.25}\selectfont
 %% a statement of activities contributing to diversity, equity and inclusion in Academia
 
-I combine ecological theory, empirical observation, and 
-mechanistic models to explore the processes
-and patterns that shape biological populations and metapopulations. 
-I am most interested in spatiotemporal dynamics of real-world populations,
-particularly discrete, stochastic, and non-linear processes.
-To date, my study systems have included human childhood diseases, along
-with the {\em Aedes aegypti} mosquito. Using historical observations, along with
-modern field trials, I have explored drivers of
-stochastic extinction and persistence,
-population response to perturbation, and metapopulation synchrony.
-Throughout, I seek the causal determinants of aggregate 
-system behavior using the simplest possible explanations.
+I combine ecological theory and empirical observation, along with mechanistic
+and statistical models, to explore the processes shaping real-world biological
+populations and metapopulations.  My primary focus is on the spatiotemporal
+dynamics of discrete, stochastic, and non-linear processes.  My study systems
+have included human childhood diseases, along with the {\em Aedes aegypti}
+mosquito.  Using historical observations and modern field trials, my work
+explores drivers of stochastic extinction and persistence, metapopulation
+synchrony, and population responses to perturbation.  Throughout, I seek the
+causal determinants of aggregate system behavior using the simplest possible
+explanations.
 %, and demographic founder events such
 %as colonization and development of resistance. 
 
-Ecological systems are inherently non-linear and stochastic,
-while observational processes are often poorly characterized. 
-To identify deterministic needles in these haystacks of 
-entangled processes and ``iterated noise'',
-I use simple mechanistic simulation models to 
-{\em predict} dynamics from theory, and probabilistic 
-statistical models to match observation to simulation.
-I also use macroecological approaches to identify 
-conserved invariant scaling relationships between 
-observables, along with the theoretical drivers of these
-relationships.
+Ecological systems are inherently non-linear and stochastic, while observational
+processes are often poorly characterized.  To identify deterministic needles in
+these haystacks of entangled processes and ``iterated noise'', I use simple
+mechanistic simulation models to {\em predict} dynamics from theory, and
+probabilistic statistical models to match observation to simulation.  I also use
+macroecological approaches to identify conserved invariant scaling relationships
+between observables, along with the theoretical drivers of these relationships.
 
-To date, much of my work has focused on childhood diseases 
-in the pre-vaccine era. Human disease ecology provides an 
-attractive study system, 
-leveraging public health observational infrastructure while 
-fulfilling the scientific imperative towards public benifit.
-As part of my Ph.D. work at the University of New Mexico with
-Dr. Helen Wearing, I designed and implemented a 
-technology-assisted data entry program to transcribe historical U.S. 
-public health reports. The end result is more than 
-20 years of weekly measles and
-pertussis case reports in some 80 cities and 35 
-states, along with influenza case and death reports.
-I have used this dataset, along with detailed demographic records, to draw 
-novel ecological insight into disease processes. From the 
-effects of spatial and temoral aggregation on metapopulation stochastic
-extinction \citep{gunning2013probabilistic}, to the effects of incomplete
-observation \citep{gunning2014conserved}, this system
-has yielded powerful insights into metapopulation 
-ecology and human health.
-Future projects in this system include a study of 
-the geographical and socioeconomic determinants of 
-the epidemic timing among populations 
-using wavelet analysis.  While previous research has 
-suggested spatial waves of pertussis incidence 
-in the U.S. \citep{choisy2012changing}, as well as 
-as modern socioeconomic roles in influenza spread \citep{viboud2006synchrony}, 
-a detailed comparison between diseases in a single 
-metapopulation is lacking.
+To date, much of my work has focused on childhood diseases in the pre-vaccine
+era. Human disease ecology provides an attractive study system, leveraging
+public health observational infrastructure while fulfilling the scientific
+imperative towards public benifit.  During my Ph.D.\ work with Dr. Helen Wearing
+at UNM, I employed seed grant funding to design, implement, and staff a
+technology-assisted data entry program that transcribed historical U.S.\ public
+health reports. The end result is more than 20 years of weekly measles and
+pertussis case reports in some 80 cities and 35 states, along with influenza
+case and death reports and associated demographic records.  I have used this
+dataset to demonstrate the effects of spatial and temoral aggregation on
+metapopulation stochastic extinction \citep{gunning2013probabilistic}. I have
+also demonstrated the obscuring effects of incomplete observation
+\citep{gunning2014conserved}, which can aid further modern disease control
+efforts.  Future projects in this system include a study of the relation between
+pre-vaccine era influenze case and death reports, allowing for a better
+leveraging of historical records. In addition, a planned collaboration with Dr.
+Micaela E. Martinez, now at Princeton University, will compare the geographical
+and socioeconomic determinants of epidemic timing between a range of acutely
+infectious human diseases, including influenza, measles, and pertussis.
 
-My post-doctoral work has focused on the 
-population ecology and vector biology of the 
-{\em Aedes aegypti} mosquito,
-with Drs. Fred Gould and Alun Lloyd at 
-North Carolina State University. I am an
-active participant in the large, multi-agency
-Projecto Dengue in Iquitos, Peru, led by Dr.
-Tom Scott of UC Davis. Here, I 
-have provided leadership in reconciling complex data 
-streams from spray control field trials, as well as
-in statistical analysis and manuscript preparation.
-In this system, we see the emergence 
-of insecticide resistence, along with signatures of  
-non-linear, density-dependent feedback resulting 
-from human perturbation. I also plan on further  
-collaboration with Dr. Gould's graduate student 
-Jennifer Baltzegar to use modern genotype by 
-sequencing methods to explore patterns of local 
-migration, census population size, and the 
-population response to perturbation by human 
-vector control. 
+I am a strong proponent of open science and reproducible 
+research methods, and I find that using open source software
+tools and careful documentation increases the efficiency 
+and quality of my work. It also enhances collaborative 
+opportunities by allowing others to quickly and faithfully 
+assimilate, reproduce and participate in my research. 
+A reproducible workflow also facilititates student 
+collaboration, encouraging individual contribution and 
+experimentation along with personal accountability. 
+Want to know who fixed that ugly bug? Just check the git logs. 
+Someone's edits broke the project? {\texttt git revert}.
 
-We live in a world awash with data. From the remote sensing 
+My post-doctoral work has focused on the population ecology and vector biology
+of the {\em Aedes aegypti} mosquito with Drs. Fred Gould and Alun Lloyd at NCSU.
+{\em Aedes aegypti} is the primary vector of a disturbing array of human
+diseases, including dengue, chikungunya, and zika, yet its basic biology remains
+poorly characterized. Along with Drs.  Gould and Lloyd and Dr. Amy Morrison, I
+have played an active role in the large, multi-agency Projecto Dengue in
+Iquitos, Peru, led by Dr. Tom Scott of UC Davis.  In pursuit of effective {\em
+Aedes aegypti} control measures, Projecto Dengue has conducted several
+large-scale urban field trials, including indoor insecticide spraying.  These
+field trials provide a unique window into the population ecology of {\em Aedes}.
+In this system, we observed the emergence of insecticide resistence, along with
+signatures of  non-linear, density-dependent feedback resulting from human
+perturbation.  
+
+During this project, I have provided valuable leadership 
+in field trial data management, reconciling complex and sometimes 
+contradictory data streams into a cohesive picture of mosquito
+population dynamics.  Using this dataset, I have led hypothesis design,
+statistical analysis, and manuscript preparation.
+This dataset is also being used to parameterized 
+a detailed, agent-based simulation model Skeeter Buster
+\citep{magori2009skeeter, okamoto2013reduce}. 
+While Skeeter Buster long pre-dates my time in the Gould-Lloyd group,
+I have led its continued development, including model validation and
+integration of field data.  
+
+These field trials provide a uniquely detailed glimpse 
+into {\em Aedes} population dynamics at a landscape level. In particular, 
+the rate and intensity of {\em Aedes} migration over urban landscapes 
+remains poorly characterized, and yet has wide-ranging effects, from
+response to control efforts to establishment of insecticide resistance. I
+plan to collaborate with Dr. Gould's graduate student, Jennifer Baltzegar, in
+using modern genotype-by-sequencing methods to characterize rates of local
+migration, census population size, and population responses to transient 
+vector control. In this way, we will combine detailed spatiotemporal 
+records about tissue samples with cost-effective next-generation sequencing
+methods to infer landscape-level population processes.
+
+At NCSU, I've also played an active role in an ongoing group collaboration 
+that uses simulation models combining population
+dynamics with population genetics. This project aims to
+characterize the performance of vector control strategies that employ so-called
+``gene drives''.  Here, engineered organisms are released to reduce wild pest
+populations through high genetic load, or to replace wild populations with a
+pathogen-resistant strain.  The subject of intense modern scrutiny, gene drives
+differ widely in design and intended performance.  Our work uses simple models
+to identify ecological uncertainties with proposed genetic constructs and
+associated release plans.
+
+
+In all pursuits, my work is dominated by an iterative relationship 
+between ecological theory and empirical data. Rather 
+than focusing on a single system, I employ a common
+approach to data-rich systems.  Indeed,
+we live in a world awash with data. From the remote sensing 
 facilities of the National Science Foundation's National 
 Ecological Observatory Network, to next-generation 
 sequencing technologies, to citizen science initiatives 
@@ -111,42 +140,44 @@ and statistical modeling, and C++ for high-performance simulation
 modeling. This pipeline allow me to rapidly explore novel data,
 and to then translate observations into testable hypotheses.
 
+Looking to the future, I see a number of promising research
+opportunities in non-equilibrium population ecology. Lyme disease 
+presence is increasing throughout the mid-West, and yet has come 
+late to Michigan, whose unique
+penisular geography has potentially slowing disease invasion \citep{hamer2010invasion}. 
+As such, researchers at the University of Michigan have a front-row seat 
+for a virgin soil invasion of a highly visible human pathogen.
+With this in mind, I plan to pursue a collaborative and/or graduate student led
+project on the invasion biology of {\em Ixodes scapularis} and Lyme disease
+prevalence.  The highly visible and much-discussed invasion of non-native
+garlic mustard, {\em Alliaria petiolata}, provides an excellent opportunity 
+for citizen science participation in population control studies.  
+Government outreach provides public guidance on non-weed control efforts, 
+yet are citizen efforts effective? This system provides an excellent 
+test case for the role public outreach can play in shaping local 
+ecology, while increasing spatiotemporal monitoring of an ongoing non-native 
+invasion. I would also look forward to a collaboration modeling and 
+monitoring the effectiveness of biological control programs \citep{evans2012importance}.
 
-At NCSU, I've also built ongoing mentoring and 
-collaborative relationships with several graduate students,
-using models combining population dynamics with 
-populaiton genetics models to 
-understand the consequences novel gene drive strategies. 
-Here, engineered organisms are released as part of vector 
-control campaigns. Our work uses simple models to identify
-ecological uncertainties with proposed genetic constructs
-and associated release plans.
+As a quantitative ecologist, I draw 
+methodology and metaphor from a range of disciplines, including 
+chemistry, physics, probability theory, and computer science.
+From undergraduate experience in molecular biology and 
+bioinformatics, to master's work combining abiotic 
+climactic datasets with ecological observation, I have broad
+and detailed understanding of modern biological systems 
+theory.
 
 
-
-%As a quantitative ecologist, I draw 
-%methodology and metaphor from a range of disciplines, including 
-%chemistry, physics, probability theory, and computer science.
 %From Markov processes and ergodic theory to information theory 
 %and statistical modeling, I employ a diverse yet robust 
 %conceptual toolset to 
 
-My involvement with the Santa Fe Institute has provided
-me with  
-Interdisciplinary collaboration relies upon a firm
-foundation in one's own area of expertise, along
-with a curiousity, trust, and willingness to learn
-from other experts.
+
+
 
 , information-theoretic 
 
-Finally, I am a strong proponent in open, 
-reproducible research. 
-I use reproducible research best practices 
-to maximize work efficiency and quality, and increase
-the ability for others to quickly and faithfully 
-build upon my work, thus increasing its impact
-on society at large.
 
 \bibliography{statement}
 
