Rework intro, rework data para, rework iquitos para

--- a/statements/statement_research.tex
+++ b/statements/statement_research.tex
@@ -17,72 +17,57 @@
 \linespread{1.25}\selectfont
 %% a statement of activities contributing to diversity, equity and inclusion in Academia
 
-I combine ecological theory and empirical observation, along with mechanistic
-and statistical models, to explore the processes shaping real-world biological
-populations and metapopulations.  My primary focus is on the spatiotemporal
-dynamics of discrete, stochastic, and non-linear processes.  My study systems
-have included human childhood diseases, along with the {\em Aedes aegypti}
-mosquito.  Using historical observations and modern field trials, my work
-explores drivers of stochastic extinction and persistence, metapopulation
-synchrony, and population responses to perturbation.  Throughout, I seek the
-causal determinants of aggregate system behavior using the simplest possible
-explanations.
+Ecological systems are inherently non-linear and stochastic, while observational
+processes are often poorly characterized.  To identify deterministic needles in
+the haystacks of real-world systems, I use 
+mechanistic simulation models to {\em predict} dynamics from theory, and
+statistical models to match observation to simulation. I also use
+macroecological approaches to identify conserved scaling relationships
+within systems. Throughout, I seek the causal determinants of aggregate 
+system behavior using the simplest possible explanations.
+My primary focus is on the spatiotemporal dynamics of real-world 
+populations and metapopulations. Combining ecological theory with 
+empirical observation, my work explores non-linear stochastic 
+population processes,
+including invasion and persistence, metapopulation synchrony,
+and population responses to perturbation.
+
+
 %, and demographic founder events such
 %as colonization and development of resistance. 
 
-Ecological systems are inherently non-linear and stochastic, while observational
-processes are often poorly characterized.  To identify deterministic needles in
-these haystacks of entangled processes and ``iterated noise'', I use simple
-mechanistic simulation models to {\em predict} dynamics from theory, and
-probabilistic statistical models to match observation to simulation.  I also use
-macroecological approaches to identify conserved invariant scaling relationships
-between observables, along with the theoretical drivers of these relationships.
-
-To date, much of my work has focused on childhood diseases in the pre-vaccine
+To date, my work has focused largely on childhood diseases in the pre-vaccine
 era. Human disease ecology provides an attractive study system, leveraging
-public health observational infrastructure while fulfilling the scientific
-imperative towards public benifit.  During my Ph.D.\ work with Dr. Helen Wearing
+extensive public health observational infrastructure while fulfilling the scientific
+imperative towards public benifit. During my Ph.D.\ work with Dr. Helen Wearing
 at UNM, I employed seed grant funding to design, implement, and staff a
 technology-assisted data entry program that transcribed historical U.S.\ public
 health reports. The end result is more than 20 years of weekly measles and
 pertussis case reports in some 80 cities and 35 states, along with influenza
-case and death reports and associated demographic records.  I have used this
-dataset to demonstrate the effects of spatial and temoral aggregation on
-metapopulation stochastic extinction \citep{gunning2013probabilistic}. I have
-also demonstrated the obscuring effects of incomplete observation
-\citep{gunning2014conserved}, which can aid further modern disease control
-efforts.  Future projects in this system include a study of the relation between
-pre-vaccine era influenze case and death reports, allowing for a better
-leveraging of historical records. In addition, a planned collaboration with Dr.
-Micaela E. Martinez, now at Princeton University, will compare the geographical
-and socioeconomic determinants of epidemic timing between a range of acutely
+case and death reports and associated demographic records.  Using this
+dataset, I have demonstrated the effects of spatial and temoral aggregation on
+metapopulation stochastic extinction \citep{gunning2013probabilistic},
+and shown the obscuring effects of incomplete observation \citep{gunning2014conserved}. 
+%which can aid further modern disease control efforts.  
+In the future, I plan to characterize the (pre-vaccine era) dependence of influenze
+death reports on case reports, allowing for a clearer interpretation and better
+leveraging of historical records. I also plan to collaborate with Dr.
+Micaela E. Martinez, now at Princeton University, to compare the geographical
+and socioeconomic determinants of epidemic timing between a range of 
 infectious human diseases, including influenza, measles, and pertussis.
-
-I am a strong proponent of open science and reproducible 
-research methods, and I find that using open source software
-tools and careful documentation increases the efficiency 
-and quality of my work. It also enhances collaborative 
-opportunities by allowing others to quickly and faithfully 
-assimilate, reproduce and participate in my research. 
-A reproducible workflow also facilititates student 
-collaboration, encouraging individual contribution and 
-experimentation along with personal accountability. 
-Want to know who fixed that ugly bug? Just check the git logs. 
-Someone's edits broke the project? {\texttt git revert}.
 
 My post-doctoral work has focused on the population ecology and vector biology
 of the {\em Aedes aegypti} mosquito with Drs. Fred Gould and Alun Lloyd at NCSU.
 {\em Aedes aegypti} is the primary vector of a disturbing array of human
 diseases, including dengue, chikungunya, and zika, yet its basic biology remains
-poorly characterized. Along with Drs.  Gould and Lloyd and Dr. Amy Morrison, I
+poorly characterized. Along with Drs. Gould and Lloyd and Dr. Amy Morrison, I
 have played an active role in the large, multi-agency Projecto Dengue in
 Iquitos, Peru, led by Dr. Tom Scott of UC Davis.  In pursuit of effective {\em
 Aedes aegypti} control measures, Projecto Dengue has conducted several
 large-scale urban field trials, including indoor insecticide spraying.  These
-field trials provide a unique window into the population ecology of {\em Aedes}.
-In this system, we observed the emergence of insecticide resistence, along with
-signatures of  non-linear, density-dependent feedback resulting from human
-perturbation.  
+field trials provide a unique window into the urban population ecology of {\em Aedes}.
+Here, we have observed signatures of non-linear, density-dependent responses to human
+perturbation, along with the possible spread of insecticide resistence.
 
 During this project, I have provided valuable leadership 
 in field trial data management, reconciling complex and sometimes 
@@ -94,21 +79,21 @@ a detailed, agent-based simulation model Skeeter Buster
 \citep{magori2009skeeter, okamoto2013reduce}. 
 While Skeeter Buster long pre-dates my time in the Gould-Lloyd group,
 I have led its continued development, including model validation and
-integration of field data.  
+integration of field data.
 
-These field trials provide a uniquely detailed glimpse 
-into {\em Aedes} population dynamics at a landscape level. In particular, 
+The Iquitos vector control field trials also yield a uniquely detailed glimpse 
+into landscape level {\em Aedes} population dynamics. In particular, 
 the rate and intensity of {\em Aedes} migration over urban landscapes 
-remains poorly characterized, and yet has wide-ranging effects, from
-response to control efforts to establishment of insecticide resistance. I
+remains poorly characterized, and yet has wide-ranging effects on, for example,
+control efforts and insecticide resistance prevention. I
 plan to collaborate with Dr. Gould's graduate student, Jennifer Baltzegar, in
 using modern genotype-by-sequencing methods to characterize rates of local
-migration, census population size, and population responses to transient 
-vector control. In this way, we will combine detailed spatiotemporal 
-records about tissue samples with cost-effective next-generation sequencing
-methods to infer landscape-level population processes.
+migration, census population size, and local population responses to transient 
+vector control. In this way, we will combine spatiotemporal records of
+spraying and sampling with cost-effective next-generation sequencing
+of tissue samples to infer landscape-level population processes.
 
-At NCSU, I've also played an active role in an ongoing group collaboration 
+At NCSU, I've played an active role in an ongoing group collaboration 
 that uses simulation models combining population
 dynamics with population genetics. This project aims to
 characterize the performance of vector control strategies that employ so-called
@@ -120,25 +105,7 @@ to identify ecological uncertainties with proposed genetic constructs and
 associated release plans.
 
 
-In all pursuits, my work is dominated by an iterative relationship 
-between ecological theory and empirical data. Rather 
-than focusing on a single system, I employ a common
-approach to data-rich systems.  Indeed,
-we live in a world awash with data. From the remote sensing 
-facilities of the National Science Foundation's National 
-Ecological Observatory Network, to next-generation 
-sequencing technologies, to citizen science initiatives 
-such as the Cornell Lab of Ornithology's eBird,
-this is a golden era of ecological observation. 
-Yet translating this flood of data into {\em knowledge} 
-remains challenging.  One of my great strengths is the
-efficient assimilation of large multidimensional data 
-assemblages into a cohesive whole. 
-I use cutting-edge quantitative tools, including 
-SQL for data management, the R languages for data visualization,
-and statistical modeling, and C++ for high-performance simulation
-modeling. This pipeline allow me to rapidly explore novel data,
-and to then translate observations into testable hypotheses.
+collaborate - Erik, Jim, SFI / Geoff West / Clio
 
 Looking to the future, I see a number of promising research
 opportunities in non-equilibrium population ecology. Lyme disease 
@@ -158,6 +125,34 @@ test case for the role public outreach can play in shaping local
 ecology, while increasing spatiotemporal monitoring of an ongoing non-native 
 invasion. I would also look forward to a collaboration modeling and 
 monitoring the effectiveness of biological control programs \citep{evans2012importance}.
+
+We live in a world awash with data, from novel remote sensing 
+capabilities such as the NSF's National Ecological Observatory 
+Network (NEON), to next-generation sequencing technologies.
+Yet translating this flood of data into {\em knowledge} 
+remains challenging.  One of my great strengths is the
+ability to rapidly integrate large, complex, and often messy 
+data assemblages into cohesive, archival-quality databases.
+I thrive in such data-rich systems, using the best tools
+available to rapidly explore and visualize system processes,
+translating observations into testable hypotheses.
+In this way, my work is dominated by an iterative relationship 
+between ecological theory and empirical data. 
+
+I use cutting-edge quantitative tools, including 
+SQL for data management, the R languages for data visualization,
+and statistical modeling, and C++ for high-performance simulation
+modeling.  I am also a strong proponent of open science and reproducible 
+research methods, and I find that using open source software
+tools and careful documentation increases the efficiency 
+and quality of my work. It also enhances collaborative 
+opportunities by allowing others to quickly and faithfully 
+assimilate, reproduce and participate in my research. 
+A reproducible workflow also facilititates student 
+collaboration, encouraging individual contribution and 
+experimentation along with personal accountability. 
+Want to know who fixed that ugly bug? Just check the git logs. 
+Someone's edits broke the project? {\texttt git revert}.
 
 As a quantitative ecologist, I draw 
 methodology and metaphor from a range of disciplines, including 
