Add evidence (teaching), cv cleanup
* New file - evidence
* Teaching
-- prev edits committed - teaching STEM, mention prob4sci
* CV:
-- teaching: add math bio, clarify dept
-- references: add roles
-- Manuscripts: add preprint link, reorder
-- minor formatting

--- a/cv/cv_201609.tex
+++ b/cv/cv_201609.tex
@@ -25,6 +25,7 @@
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 %% footer
 \usepackage{fancyhdr}
+\usepackage[hidelinks]{hyperref}
 \pagestyle{fancy}
 \fancyhf{} 
 \renewcommand{\headrulewidth}{0pt}
@@ -78,13 +79,13 @@ and reproducible research methods.
 {\bf University of New Mexico, Albuquerque} \hfill {\em Summer 2014} \\ 
 Ph.D. with Distinction in Biology (Disease Ecology with concentration in
 Integrative Biology) \\
-Committee: Drs. Helen J. Wearing (advisor), Jim Brown, Melanie Moses, and Erik Erhardt\\
+Committee: Drs. Helen J. Wearing (advisor), James H. Brown, Melanie Moses, and Erik Erhardt\\
 Title: Population and metapopulation ecology of childhood diseases in the pre-vaccine era United States
 
 {\bf University of New Mexico, Albuquerque} \hfill {\em Fall 2009} \\ 
 Masters of Water Resources (Riparian Hydroecology) \\
 Advisors: Drs. Bruce Thomson and Roy Jemison \\
-Title: Estimating pHreatophyte evapotranspiration from diel groundwater fluctuations in the Middle Rio Grande Bosque
+Title: Estimating phreatophyte evapotranspiration from diel groundwater fluctuations in the Middle Rio Grande Bosque
 
 {\bf University of Georgia, Athens} \hfill {\em Fall 2001} \\ 
 Bachelor of Science, Biochemistry and Molecular Biology \\
@@ -111,9 +112,14 @@ D.M. Smith, D.M. Finch, {\bf C.E. Gunning}, R. Jemison, J.F. Kelly (2009). Post-
 \begin{rSection}{Pending Publications}
 Mentee co-author: $\dagger$
 
+{\bf C.E. Gunning}, M.J Ferrari, E. Erhardt, H.J. Wearing.
+Evidence of cryptic incidence in childhood diseases. 
+Preprint available at \url{http://biorxiv.org/content/early/2016/10/04/079194}.
+In Submission (PLOS Biology). 
+
 M.R. Vella$\dagger$, {\bf C.E. Gunning}, A.L. Lloyd, F. Gould.
 Evaluating strategies for reversing CRISPR-Cas9 gene drives.
-Nature Biotechnology, In Review.
+ In Review (Nature Biotechnology).
 
 {\bf C.E. Gunning}, K. Okamoto, H. Astete, G.M. Vasquez, E. Erhardt, 
 C. Del Aguila, R. Pinedo, R. Cardenas, C. Pacheco, E. Chalco, 
@@ -121,11 +127,9 @@ H. Rodriguez-Ferruci, T.W. Scott, A.L. Lloyd, F. Gould, A.C. Morrison.
 Efficacy of {\em Aedes aegypti} control by indoor Ultra Low Volume (ULV) spraying 
 in Iquitos, Peru. In Prep.
 
-{\bf C.E. Gunning}, M.J Ferrari, E. Erhardt, H.J. Wearing.
-Evidence of cryptic incidence in childhood diseases. In Prep.
-
 J. Nightingale$\dagger$, M. Holstad, {\bf C.E. Gunning}.
-Temperature-dependence in sewer blockage frequency. In Prep.
+Temperature-dependence in sewer blockage frequency. In Prep. Draft available
+on request.
 
 \end{rSection}
 
@@ -221,17 +225,21 @@ Groundwater Association (NGWA) Conference. Albuquerque, NM. May 2007.
 %------------------------------------------------
 \begin{rSection}{Teaching}
 \subhead{Instructor}
-\begin{rSubsection}{Probability for Scientists}{Fall 2013, UNM Biology}{}{}
+\begin{rSubsection}{Probability for Scientists}{Fall 2013, UNM Biology and Statistics}{}{}
 \item Course designer, lead instructor
 \item Mixed undergraduate/graduate course (primarily undergraduate)
 \item Hands-on course covering introductory probability, statistics, and data analysis
 \end{rSubsection}
 \subhead{Teaching Assistant}
-\begin{rSubsection}{Biology for Non-majors}{Spring 2014}{}{}
+\begin{rSubsection}{Biology for Non-majors}{Spring 2014, UNM Biology}{}{}
 \nullitem
 \end{rSubsection}
 \begin{rSubsection}{Statistical Programming}{Spring 2013, UNM Statistics}{}{}
 \item Mixed undergraduate/graduate course (primarily graduate)
+\item Also guest lectured
+\end{rSubsection}
+\begin{rSubsection}{Mathematical Biology}{Fall 2012, UNM Biology}{}{}
+\item Mixed undergraduate/graduate course (primarily undergraduate)
 \item Also guest lectured
 \end{rSubsection}
 \begin{rSubsection}{Genetics}{Spring 2009, UNM Biology}{}{}
@@ -241,7 +249,7 @@ Groundwater Association (NGWA) Conference. Albuquerque, NM. May 2007.
 \item Assisted in writing course material
 \end{rSubsection}
 \subhead{Guest Lecturer}
-\begin{rSubsection}{Theoretical Ecology}{Spring 2015, University of Montana}{}{}
+\begin{rSubsection}{Theoretical Ecology}{Spring 2015, Univ. of Montana}{}{}
 \item Also assisted students with R
 \end{rSubsection}
 \subhead{Workshops and Training}
@@ -264,6 +272,8 @@ Groundwater Association (NGWA) Conference. Albuquerque, NM. May 2007.
 Disease conference
 \end{rSubsection}
 \end{rSection}
+
+\newpage
 
 \begin{rSection}{Mentoring}
 \item Spring 2015 - present. Robert Liberatore, Math Education Software Developer
@@ -318,22 +328,24 @@ distribution estimation.
 \item 2010-2011. Contributor to \texttt{xts} and \texttt{zoo}: R packages for time series handling and analysis.
 \end{rSection}
 
-\clearpage
-
 \begin{rSection}{References}
 \begin{rSubsection}{Alun Lloyd}{}{Department of Mathematics}{North Carolina State University}
+\item Post-doctoral co-advisor (in collaboration with Fred Gould)
 \item email: alun\_lloyd@ncsu.edu
 \item phone:  919.515.1910
 \end{rSubsection}
 \begin{rSubsection}{Fred Gould}{}{Department of Entomology \& Plant Pathology}{North Carolina State University}
+\item Post-doctoral co-advisor (in collaboration with Alun Lloyd)
 \item email: fred\_gould@ncsu.edu
 \item phone: 919.515.1647 
 \end{rSubsection}
 \begin{rSubsection}{Helen Wearing}{}{Department of Biology, Department of Mathematics and Statistics}{University of New Mexico}
+\item Co-author, Ph.D. Advisor
 \item email: hwearing@math.unm.edu
 \item phone: 505.277.0357
 \end{rSubsection}
 \begin{rSubsection}{Erik Erhardt}{}{Department of Mathematics and Statistics}{University of New Mexico}
+\item Co-author, teaching collaborator
 \item email: erike@stat.unm.edu
 \item phone: 505.750.4424
 \end{rSubsection}
