--- a/statements/statement_teaching.tex
+++ b/statements/statement_teaching.tex
@@ -15,6 +15,7 @@
 \thispagestyle{empty}
 \linespread{1.25}\selectfont
 
+
 My teaching philosophy is meaning-centered and skill-oriented.  Whether teaching
 programming to biology graduate students, probability and statistics to biology
 under-graduates, or introductory biology to non-major undergraduates, I
@@ -41,11 +42,13 @@ is a single color, with suites representing grandparent genomes.
 Random assortment quickly reveals that offspring always are
 evenly matched in color (parent), but differ widely in the 
 relative contribution of grandparents.  In more technically
-sophisticated classes, I frequently use coin flips to
+sophisticated classes, such as the {\em Probability for Scientists}
+class that I proposed, co-designed, and co-taught at UNM,
+I frequently use coin flips and dice rolls to
 illustrate topics in randomness (side-note: 
 pennies are inexpensive, abundantly available, and endlessly 
 amusing teaching aids).
-Using coin flips, students can explore a range 
+Using coins, students can explore a range 
 of complex phenomena, from memory-less Markov chains to the 
 central limit theorem.  These physical activities provide
 ``tangible metaphors'' that are 
@@ -115,6 +118,17 @@ independence and discipline outside of academia.
 I work with students to identify their interests 
 and goals, and then collaboratively develop a roadmap 
 to achieve those goals.
+
+A large and growing number of STEM students are seeking
+access to sophisticated quantitative and computational 
+skills. Yet integrating formal training in mathematics,
+statistics, and computer programming into existing
+curriculums remains a challenge. I excel at  
+teaching problem-oriented quantitative skills to 
+STEM students from a range of backgrounds and disciplines.
+This training provides a solid foundation for success 
+in whatever path students chose to pursue, from industry to 
+academia.
 
 The ``lightbulb experience'' of student insight is 
 deeply satisfying to both teacher and student. 
